// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template accepts account object with complete data 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      description="Tesla, because they're awesome!"
      image="https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png"
      meta={
        Array [
          Object {
            "content": "article",
            "property": "og:type",
          },
        ]
      }
      title="Tesla Fund" />
    <Right
      background="https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png"
      mobile={true} />
    <Right
      background="https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-primary",
      ]
    }
    scroll={true}>
    <Link
      className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain visuallyhidden@handheld"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/give/now">
      <i
        className="icon-arrow-back soft-half-right display-inline-block"
        style={
          Object {
            "verticalAlign": "middle",
          }
        } />
      <span
        className="display-inline-block"
        style={
          Object {
            "marginTop": "5px",
            "verticalAlign": "middle",
          }
        }>
        Back
      </span>
    </Link>
    <div
      className="soft@lap-and-up soft-double-top@lap-and-up">
      <div
        className="soft soft-double-bottom soft-double-top@lap-and-up">
        <h2>
          Tesla Fund
        </h2>
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Web Team Tesla Fund",
            }
          } />
      </div>
    </div>
    <div
      className="background--light-secondary">
      <div
        className="constrain-copy soft-double@lap-and-up">
        <div
          className="soft soft-double-bottom soft-double-top@lap-and-up">
          <Connect(CartContainer)
            accounts={
              Array [
                Object {
                  "description": "Web Team Tesla Fund",
                  "id": "e450b1f1dbb79ffea48d9aba1a00ea0f2885d4bfe435683d1b1129fae408729d",
                  "image": "https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png",
                  "images": Array [
                    Object {
                      "cloudfront": "https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png",
                      "fileLabel": "2:1",
                      "fileName": "Image%202016-11-07%20at%202.38.14%20PM.png",
                      "fileType": null,
                      "s3": "https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png",
                    },
                  ],
                  "name": "Tesla Fund",
                  "order": 0,
                  "summary": "Tesla, because they're awesome!",
                },
              ]
            }
            donate={true} />
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`Template accepts account object without image data 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      description="Tesla, because they're awesome!"
      image="https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png"
      meta={
        Array [
          Object {
            "content": "article",
            "property": "og:type",
          },
        ]
      }
      title="Tesla Fund" />
    <Right
      background="https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png"
      mobile={true} />
    <Right
      background="https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-primary",
      ]
    }
    scroll={true}>
    <Link
      className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain visuallyhidden@handheld"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/give/now">
      <i
        className="icon-arrow-back soft-half-right display-inline-block"
        style={
          Object {
            "verticalAlign": "middle",
          }
        } />
      <span
        className="display-inline-block"
        style={
          Object {
            "marginTop": "5px",
            "verticalAlign": "middle",
          }
        }>
        Back
      </span>
    </Link>
    <div
      className="soft@lap-and-up soft-double-top@lap-and-up">
      <div
        className="soft soft-double-bottom soft-double-top@lap-and-up">
        <h2>
          Tesla Fund
        </h2>
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Web Team Tesla Fund",
            }
          } />
      </div>
    </div>
    <div
      className="background--light-secondary">
      <div
        className="constrain-copy soft-double@lap-and-up">
        <div
          className="soft soft-double-bottom soft-double-top@lap-and-up">
          <Connect(CartContainer)
            accounts={
              Array [
                Object {
                  "description": "Web Team Tesla Fund",
                  "id": "e450b1f1dbb79ffea48d9aba1a00ea0f2885d4bfe435683d1b1129fae408729d",
                  "image": "https://cl.ly/i26e/Image%202016-11-07%20at%202.38.14%20PM.png",
                  "name": "Tesla Fund",
                  "order": 0,
                  "summary": "Tesla, because they're awesome!",
                },
              ]
            }
            donate={true} />
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`Template looks empty with no props 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      meta={
        Array [
          Object {
            "content": "article",
            "property": "og:type",
          },
        ]
      } />
    <Right
      mobile={true} />
    <Right
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-primary",
      ]
    }
    scroll={true}>
    <Link
      className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain visuallyhidden@handheld"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/give/now">
      <i
        className="icon-arrow-back soft-half-right display-inline-block"
        style={
          Object {
            "verticalAlign": "middle",
          }
        } />
      <span
        className="display-inline-block"
        style={
          Object {
            "marginTop": "5px",
            "verticalAlign": "middle",
          }
        }>
        Back
      </span>
    </Link>
    <div
      className="soft@lap-and-up soft-double-top@lap-and-up">
      <div
        className="soft soft-double-bottom soft-double-top@lap-and-up">
        <h2 />
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          } />
      </div>
    </div>
    <div
      className="background--light-secondary">
      <div
        className="constrain-copy soft-double@lap-and-up">
        <div
          className="soft soft-double-bottom soft-double-top@lap-and-up">
          <Connect(CartContainer)
            accounts={
              Array [
                "",
              ]
            }
            donate={true} />
        </div>
      </div>
    </div>
  </Left>
</div>
`;
